--- a/AI- BOT.ipynb
+++ b/AI- BOT.ipynb
@@ -203,7 +203,7 @@
     "def jokes():\n",
     "    speak(pyjokes.get_joke())\n",
     "def creator():\n",
-    "    speak('Haritaaa ,reshhmaaa,kowsika and niyantha are those who created me')\n",
+    "    speak('Harita is my creator')\n",
     "def who_are_you():\n",
     "    speak('i am amigo created by my friends to help them virtually')\n",
     "def age():\n",
